--- a/index.html
+++ b/index.html
@@ -6,36 +6,42 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Tercer Proyecto con HTML5 y CSS3</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="responsive.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=B612:700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<h1>Galería de Imágenes</h1>
-		<h2>Una Selección de Flores.</h2>
+	<header class="principal">
+		<div class="ancho">
+			<h1>Galería de Imágenes:</h1>
+			<h2>Guitarras</h2>
+		</div>
 	</header>
-	<section>
+	<section class="wap">
 		<figure>
-			<img src="imagenes/1.jpg">
-			<figcaption>Foto 1: Flores de corte.</figcaption>
+			<img src="imagenes/Epiphone.jpg" width="100" height="100">
+			<figcaption>Epiphone</figcaption>
 		</figure>
 		<figure>
-			<img src="imagenes/2.jpg">
-			<figcaption>Foto 2: Flor de Mirabilis Jalapa.</figcaption>
+			<img src="imagenes/Fender_Stratocaster.jpg" width="100" height="100">
+			<figcaption>Fender Stratocaster</figcaption>
 		</figure>
 		<figure>
-			<img src="imagenes/3.jpg">
-			<figcaption>Foto 3: Strelitzis. Flores de las aves.</figcaption>
+			<img src="imagenes/gibson-les-paul.jpg" width="100" height="100">
+			<figcaption>Gibson Les Paul</figcaption>
 		</figure>
 		<figure>
-			<img src="imagenes/4.jpg">
-			<figcaption>Foto 4: Flor del Opio.</figcaption>
+			<img src="imagenes/Ibanez.jpg" width="100" height="100">
+			<figcaption>Ibanez</figcaption>
 		</figure>
 		<figure>
-			<img src="imagenes/5.jpg">
-			<figcaption>Foto 5: Rosas.</figcaption>
+			<img src="imagenes/Paul Reed Smith .jpg" width="100" height="100">
+			<figcaption>Paul Reed Smith</figcaption>
 		</figure>
 		<figure>
-			<img src="imagenes/6.jpg">
-			<figcaption>Foto 6: Pensamiento.</figcaption>
+			<img src="imagenes/Rickenbacker.jpg" width="100" height="100">
+			<figcaption>Rickenbacker</figcaption>
 		</figure>
 	</section>
 	<footer>
